feat: upgrade to Quarkus 3.27 LTS